Removing Mads empty elements for create/edit forms. DHH-386

--- a/app/views/dams_built_work_places/new.html.erb
+++ b/app/views/dams_built_work_places/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new Dams BuiltWorkPlace</h1>
-<%= form_for @dams_built_work_place do |f| %>
+<%= form_for @dams_built_work_place, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'dams_built_work_place[name]', "Name" %>
   <%= text_field_tag 'dams_built_work_place[name]', '', required: true, class: "input-block-level" %>
@@ -8,7 +8,7 @@
   
   <%= f.fields_for :builtWorkPlaceElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level" %>
+    <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
