--- a/app/views/dams_built_work_places/edit.html.erb
+++ b/app/views/dams_built_work_places/edit.html.erb
@@ -5,23 +5,23 @@
 	
 		<h2>Edit Built Work Place</h2>
 		
-		<%= form_for @dams_built_work_place do |f| %>
+		<%= form_for @dams_built_work_place, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
 		
 			<%= label_tag 'dams_built_work_place[name][]', "Name" %>
-			<%= text_field_tag 'dams_built_work_place[name][]', @dams_built_work_place.name[0], class: "input-block-level" %>
+			<%= text_field_tag 'dams_built_work_place[name][]', @dams_built_work_place.name[0], class: "input-block-level", required: true%>
 		
 			<%= label_tag 'dams_built_work_place[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'dams_built_work_place[externalAuthority][]', @dams_built_work_place.externalAuthority, class: "input-block-level" %>
 
 	 	  <%= f.fields_for :scheme, include_id: false do |se| %>
 	        <%= se.label :id, "Scheme" %>
-	        <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
+	        <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" , :required=>true%>
 	      <% end %>
 	      <%= f.fields_for :builtWorkPlaceElement do |te| %>
 	        <%= te.label :elementValue, "Element Value" %>
-	        <%= te.text_field :elementValue, class: "input-block-level" %>
+	        <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
 	      <% end %>
 							
 			<div class="form-actions">
