--- a/app/views/dams_cultural_contexts/edit.html.erb
+++ b/app/views/dams_cultural_contexts/edit.html.erb
@@ -5,7 +5,7 @@
   
     <h2>Edit Cultural Context</h2>
     
-    <%= form_for @dams_cultural_context do |f| %>
+    <%= form_for @dams_cultural_context, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
     
       <%= render 'error_messages', object: f.object %>
     
@@ -21,7 +21,7 @@
       <% end %>
       <%= f.fields_for :culturalContextElement do |te| %>
         <%= te.label :elementValue, "Element Value" %>
-        <%= te.text_field :elementValue, class: "input-block-level" %>
+        <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
       <% end %>
               
       <div class="form-actions">
