--- a/app/views/dams_functions/new.html.erb
+++ b/app/views/dams_functions/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new Dams Function</h1>
-<%= form_for @dams_function do |f| %>
+<%= form_for @dams_function, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'dams_function[name]', "Name" %>
   <%= text_field_tag 'dams_function[name]', '', required: true, class: "input-block-level"  %>
@@ -7,7 +7,7 @@
   <%= url_field_tag 'dams_function[externalAuthority]', '', class: "input-block-level" %> 
   <%= f.fields_for :functionElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level"%>
+    <%= te.text_field :elementValue, class: "input-block-level", :required=>true%>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
