--- a/app/views/dams_related_resources/edit.html.erb
+++ b/app/views/dams_related_resources/edit.html.erb
@@ -3,7 +3,7 @@
    resourceTypeArray = [["related", "related"],["online exhibit", "online exhibit"],["online finding aid", "online finding aid"],["news release", "news release"],
    						["depiction", "depiction"],["journal entry", "journal entry"],["basket", "basket"],["artifact", "artifact"]]
 %> 
-<%= form_for @dams_related_resource do |f| %>
+<%= form_for @dams_related_resource, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
   <%= select_tag "dams_related_resource[type]", options_for_select(resourceTypeArray, :selected => @dams_related_resource.type[0]) , :prompt=>"Select Type", :class=>"input-drop-down"%>
   <br/>
   <%= label_tag 'dams_related_resource[uri]', "URI" %><%= text_field_tag 'dams_related_resource[uri][]', @dams_related_resource.uri[0] %>
