--- a/app/views/dams_style_periods/edit.html.erb
+++ b/app/views/dams_style_periods/edit.html.erb
@@ -5,7 +5,7 @@
 	
 		<h2>Edit Style Period</h2>
 		
-		<%= form_for @dams_style_period do |f| %>
+		<%= form_for @dams_style_period, :html => { :onsubmit => 'removeEmptyFields();'}  do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
 		
@@ -21,7 +21,7 @@
 	      <% end %>
 	      <%= f.fields_for :stylePeriodElement do |te| %>
 	        <%= te.label :elementValue, "Element Value" %>
-	        <%= te.text_field :elementValue, class: "input-block-level" %>
+	        <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
 	      <% end %>
 							
 			<div class="form-actions">
