--- a/app/views/dams_techniques/new.html.erb
+++ b/app/views/dams_techniques/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new Dams Technique</h1>
-<%= form_for @dams_technique do |f| %>
+<%= form_for @dams_technique, :html => { :onsubmit => 'removeEmptyFields();'}  do |f| %>
   <%= render 'error_messages' %>
   <%= label_tag 'dams_technique[name]', "Name" %>
   <%= text_field_tag 'dams_technique[name]', '', required: true, class: "input-block-level"  %>
@@ -8,7 +8,7 @@
   
   <%= f.fields_for :techniqueElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level"  %>
+    <%= te.text_field :elementValue, class: "input-block-level", :required=>true  %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
