--- a/app/views/mads_complex_subjects/new.html.erb
+++ b/app/views/mads_complex_subjects/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new MADS Complex Subject</h1>
-<%= form_for @mads_complex_subject do |f| %>
+<%= form_for @mads_complex_subject, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'mads_complex_subject[name]', "Name" %>
   <%= text_field_tag 'mads_complex_subject[name]', '', required: true, class: "input-block-level"%>
