--- a/app/views/mads_corporate_names/edit.html.erb
+++ b/app/views/mads_corporate_names/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="span10 offset1">
     <h2>Edit Corporate Name</h2>
 
-    <%= form_for @mads_corporate_name do |f| %>
+    <%= form_for @mads_corporate_name, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 
       <%= render 'error_messages', object: f.object %>
 
