--- a/app/views/mads_genre_forms/new.html.erb
+++ b/app/views/mads_genre_forms/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new MADS GenreForm</h1>
-<%= form_for @mads_genre_form do |f| %>
+<%= form_for @mads_genre_form, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'mads_genre_form[name]', "Name" %>
   <%= text_field_tag 'mads_genre_form[name]', '', required: true, class: "input-block-level" %>
@@ -7,7 +7,7 @@
   <%= url_field_tag 'mads_genre_form[externalAuthority]', '', class: "input-block-level" %> 
   <%= f.fields_for :genreFormElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level" %>
+    <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
