--- a/app/views/mads_geographics/edit.html.erb
+++ b/app/views/mads_geographics/edit.html.erb
@@ -5,7 +5,7 @@
 	
 		<h2>Edit Geographic</h2>
 		
-		<%= form_for @mads_geographic do |f| %>
+		<%= form_for @mads_geographic, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
 		
@@ -20,7 +20,7 @@
 		      <% end %>
 		      <%= f.fields_for :geographicElement do |te| %>
 		        <%= te.label :elementValue, "Element Value" %>
-		        <%= te.text_field :elementValue, class: "input-block-level" %>
+		        <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
 		      <% end %>
 				
 			<div class="form-actions">
