--- a/app/views/mads_languages/edit.html.erb
+++ b/app/views/mads_languages/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit MADS Language</h1>
-<%= form_for @mads_language do |f| %>
+<%= form_for @mads_language, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 		<%= render 'error_messages', object: f.object %>
 	
 		<%= label_tag 'mads_language[name]', "Name" %>
@@ -17,7 +17,7 @@
 	  <% end %>
 	  <%= f.fields_for :languageElement do |te| %>
 	    <%= te.label :elementValue, "Element Value" %>
-	    <%= te.text_field :elementValue, class: "input-block-level" %>
+	    <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
 	  <% end %>
 						
 		<div class="form-actions">
