--- a/app/views/mads_languages/new.html.erb
+++ b/app/views/mads_languages/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new MADS Language</h1>
-<%= form_for @mads_language do |f| %>
+<%= form_for @mads_language, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
   <%= render 'error_messages' %>
   <%= label_tag 'mads_language[name]', "Name" %>
   <%= text_field_tag 'mads_language[name]','', required: true, class: "input-block-level" %>
@@ -10,7 +10,7 @@
 
   <%= f.fields_for :languageElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue, class: "input-block-level" %>
+    <%= te.text_field :elementValue, class: "input-block-level", :required=>true %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
