--- a/app/views/mads_names/new.html.erb
+++ b/app/views/mads_names/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new MADS Name</h1>
-<%= form_for @mads_name do |f| %>
+<%= form_for @mads_name, :html => { :onsubmit => 'removeEmptyFields();'} do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'mads_name[name]', "Name" %>
   <%= text_field_tag 'mads_name[name]', '', required: true, class: "input-block-level" %>
