--- a/app/views/mads_schemes/edit.html.erb
+++ b/app/views/mads_schemes/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit MADS Scheme</h1>
-<%= form_for @mads_scheme do |f| %>
+<%= form_for @mads_scheme, :required=>true do |f| %>
   <%= label_tag 'mads_scheme[name]', "Name" %><%= text_field_tag 'mads_scheme[name][]', @mads_scheme.name[0] %>
   <br>
   <%= label_tag 'mads_scheme[code]', "Code" %><%= text_field_tag 'mads_scheme[code][]', @mads_scheme.code[0] %>
