--- a/app/views/mads_schemes/new.html.erb
+++ b/app/views/mads_schemes/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new MADS Scheme</h1>
-<%= form_for @mads_scheme do |f| %>
+<%= form_for @mads_scheme, :required=>true do |f| %>
   <%= label_tag 'mads_scheme[name]', "Name" %><%= text_field_tag 'mads_scheme[name]', '', class: "input-block-level"  %>
   <br>
   <%= label_tag 'mads_scheme[code]', "Code" %><%= text_field_tag 'mads_scheme[code]', '',  class: "input-block-level"  %>
