--- a/app/views/get_data/get_subject.html.erb
+++ b/app/views/get_data/get_subject.html.erb
@@ -4,7 +4,14 @@
 <script src="/assets/jquery.js" type="text/javascript"></script>
 <script src="/assets/typeahead.bundle.js" type="text/javascript"></script>
 <script src="/assets/edit.js" type="text/javascript"></script>
+<script type="text/javascript">
 
+$(document).ready(function(){
+
+  getAutocompleteList_callback();
+
+});
+</script>
 
 <% if !@fieldName.nil? and @fieldName == "simpleSubjectURI"%>
 	<b><%= @label%></b><br/>
@@ -13,9 +20,8 @@
 <% else %>
 	<%= select_tag "#{@formType}[#{@fieldName}_attributes][#{@fieldId}][id]", options_for_select(@subjects, :selected => "#{Rails.configuration.id_namespace}#{@selectedValue}") , :prompt=>"Select #{@label}", :onChange=>"javascript: checkOption(this.id,true,'#{@label}');" %>
 
-      <div id="subjectField">
-      <input type="text" class="typeahead"  /><br/>
-      </div>
+       <input type="text" class="typeahead" id="subject_label" /><br/>
+      <input type="text"  id="subject_id" class="input-block-level" /><br/>
       
 <% end %>
 <p class="removeIcon"><%= link_to_delete_fields "X"%></p>
