--- a/app/views/shared/edit_fields/_scheme_fields.html.erb
+++ b/app/views/shared/edit_fields/_scheme_fields.html.erb
@@ -1,4 +1,4 @@
 <%= f.fields_for :scheme do |se| %>
-  <%= se.label :id, "Scheme" %>
+  <%= se.label :id, "Vocabulary" %>
   <%= se.select :id, options_for_select(@mads_schemes), {:include_blank => 'Select MadsScheme'}, :required => "true", :style => "width:400px" %>
 <% end %>
