--- a/app/views/shared/edit_fields/_simple_subjects_edit_fields.html.erb
+++ b/app/views/shared/edit_fields/_simple_subjects_edit_fields.html.erb
@@ -1,12 +1,14 @@
 <div class="fields">
 <br/>
 <% if selected_type.nil?%>
+<%= text_field_tag "test1", "test1" %>
 	<%= select_tag "#{object_type}[subjectType][]",  options_for_select(typeArray) , :prompt=>"Select Subject Type" , :onChange=>"javascript: getEditDynamicFields(this,'#{object_type}','#newSimpleSubjects','simpleSubject');"%>
 	<div id="newSimpleSubjects"></div>
 <% else %>
+    
 	<%= hidden_field_tag "#{object_type}[subjectType][]", "#{selected_type}" %>
 	<script type="text/javascript">
-	   getDynamicFields("<%= selected_type %>","<%= object_type %>","#newSimpleSubjects<%= index %>","0","simpleSubject","<%= selected_value %>");
+	   getTypeaheadFields("<%= selected_type %>","<%= object_type %>","#newSimpleSubjects<%= index %>","0","simpleSubject","<%= selected_value %>");
 	</script>
 	<div id="newSimpleSubjects<%= index %>"></div>
 	</div>	
