Adding a function to get label of linked record by using solr query. (DHH-422)

--- a/app/views/get_data/get_subject.html.erb
+++ b/app/views/get_data/get_subject.html.erb
@@ -6,14 +6,11 @@
 <script src="/assets/edit.js" type="text/javascript"></script>
 
 
-
-
 <% if !@fieldName.nil? and @fieldName == "simpleSubjectURI" %>
 	<b><%= @label%></b><br/>
     <% if !@selectedValue.nil? and @selectedValue != "0"%>
 
-   
-    <%= text_field_tag "newClassNameLabel", "0", class: "typeahead" %>
+    <%= text_field_tag "newClassNameLabel", "#{@selectedLabel}", class: "typeahead" %>
     <%= text_field_tag "#{@formType}[#{@fieldName}][]", "#{Rails.configuration.id_namespace}#{@selectedValue}", class: "input-block-level", id: "newClassNameId"%>
     <% else %>
     <%= text_field_tag "newClassNameLabel", "", class: "typeahead" %>
