Updating the Note type controller vocabulary in forms. DHH-375

--- a/app/views/shared/edit_fields/_notes_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_notes_edit_form.html.erb
@@ -8,11 +8,11 @@
 	note = object.send(type)
 	i = 0
     noteTypeArray = [["arrangement", "arrangement"],["bibliography", "bibliography"],["biography", "biography"],["classification", "classification"],
-   						["credits", "credits"],["custodial history", "custodial history"],["description", "description"],["digitalOrigin", "digitalOrigin"],
+   						["credits", "credits"],["custodial history", "custodial history"],["description", "description"],["digital origin", "digital origin"],
    						["extent", "extent"],["identifier", "identifier"],["inscription", "inscription"],["local attribution", "local attribution"],
    						["location of originals", "location of originals"],["material details", "material details"],["note", "note"],["physical description", "physical description"],
    						["performers", "performers"],["preferred citation", "preferred citation"],["publication", "publication"],["scope and content", "scope and content"],
-   						["series", "series"],["statement of responsibility", "statement of responsibility"],["tableOfContents", "tableOfContents"],
+   						["series", "series"],["statement of responsibility", "statement of responsibility"],["table of contents", "table of contents"],
    						["technical requirements", "technical requirements"],["thesis", "thesis"],["venue", "venue"]]	
 	if note != nil
 		while i < note.size  do
