--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -1,5 +1,5 @@
 <% collectionsView = defined?(greetingsFromCollectionsView) ? true : false %>
-<% notesToExclude = ['performers','extent','abstract','tableOfContents','identifier','existence and location of originals','general physical description','dimensions','digitalOrigin'] %>
+<% notesToExclude = ['performers','extent','abstract','table of contents','identifier','existence and location of originals','general physical description','dimensions','digital origin'] %>
 
 <% if collectionsView %>
 	<% notesToExclude << 'description' %>
@@ -13,7 +13,7 @@
 <%= render :partial => 'shared/fields/note', :locals => {:type => 'abstract'} %>
 <%= render :partial => 'shared/fields/scope_of_content' %>
 <%= render :partial => 'shared/fields/cartographic' %>
-<%= render :partial => 'shared/fields/note', :locals => {:type => 'tableOfContents'} %>
+<%= render :partial => 'shared/fields/note', :locals => {:type => 'table of contents'} %>
 <%= render :partial => 'shared/fields/note', :locals => {:exclude_type => notesToExclude, :exclude_label => ['Digital object made available by'] } %>
 <%= render :partial => 'shared/fields/resource_type' %>
 <%= render :partial => 'shared/fields/language' %>
