Displaying the collection relatedResource in the object view. DHH-364

--- a/app/views/dams_objects/_metadata_component.html.erb
+++ b/app/views/dams_objects/_metadata_component.html.erb
@@ -86,7 +86,7 @@
 				<%= render :partial => 'shared/fields/license', :locals => {:componentIndex => componentIndex} %>
 				<%= render :partial => 'shared/fields/other_rights', :locals => {:componentIndex => componentIndex} %>
 				<%= render :partial => 'shared/fields/rights_holder', :locals => {:componentIndex => componentIndex} %>
-				<%= render :partial => 'shared/fields/related_resource', :locals => {:componentIndex => componentIndex} %>
+				<%= render :partial => 'shared/fields/related_resource', :locals => {:componentIndex => componentIndex, :collectionDoc => @document, :docType => "object"} %>
 
 			</tbody>
 		</table>
