--- a/app/views/shared/fields/_related_resource.html.erb
+++ b/app/views/shared/fields/_related_resource.html.erb
@@ -9,15 +9,18 @@
 		 htmlClose = "</ul></dd>"
 	 end
 
-	 fieldData = @document["#{prefix}related_resource_json_tesim"]
+	 fieldData = collectionDoc["#{prefix}related_resource_json_tesim"]
 
 	 if fieldData != nil	
 	 	needLabel = "false"
 	 	fieldData.each do |datum|
 			relatedResource = JSON.parse(datum)
-			if !relatedResource['description'].blank? && relatedResource['type'] != "hydra-afmodel"	 
+			if !relatedResource['description'].blank? && relatedResource['type'] != "hydra-afmodel"
 				needLabel = "true"
 			end
+			if docType == "object" && !@collectionDocArray.nil? && @collectionDocArray.size > 0
+				needLabel = "false"
+			end			
 		end
  		
  		if(needLabel == "true")
@@ -40,11 +43,12 @@
 						</strong>
 					</p>
 					<li><%= link_to relatedResource['description'], relatedResource['uri'] %></li>
-					<p/>
+					</p>
 <%
       			end
       		end
 	 	end
+
 	 	if(needLabel == "true")
 	 		concat htmlClose.html_safe
 	 	end
