Removing the capitalized label. DHH-364

--- a/app/views/shared/fields/_related_resource.html.erb
+++ b/app/views/shared/fields/_related_resource.html.erb
@@ -36,7 +36,7 @@
 					<p>
 						<strong>
 							<% if relatedResource['type'] != nil && !relatedResource['type'].blank? %>
-							<%= relatedResource['type'].upcase %>
+							<%= relatedResource['type'] %>
 							<% else %>
 							General Related Resource
 							<% end %>
