Updated autocomplete for subject type.(DHH-427)

--- a/app/views/mads_topics/edit.html.erb
+++ b/app/views/mads_topics/edit.html.erb
@@ -3,7 +3,10 @@
 
 $(document).ready(function(){
 
-  getMultiAutoCompleteList("Topic");
+  //getMultiAutoCompleteList("Topic");
+
+   getAutocompleteItem();     
+
 
 });
 </script>
