Fixed CSS issues for dropdown list. (DHH-427)

--- a/app/views/mads_topics/edit.html.erb
+++ b/app/views/mads_topics/edit.html.erb
@@ -3,10 +3,7 @@
 
 $(document).ready(function(){
 
-  //getMultiAutoCompleteList("Topic");
-
-   getAutocompleteItem();     
-
+  getMultiAutoCompleteList("Topic");
 
 });
 </script>
@@ -21,10 +18,10 @@ $(document).ready(function(){
       <%= render 'error_messages', object: f.object %>
        
        
-      <div id="subjectField">
+      
       <%= label_tag 'mads_topic[name]', "Name" %>
-      <%= text_field_tag 'mads_topic[name]', @mads_topic.name[0], class: "typeahead" %>
-      </div>
+      <%= text_field_tag 'mads_topic[name]', @mads_topic.name[0], class: "typeahead", id: "subjectField"%>
+      
       
       <%= label_tag 'mads_topic[externalAuthority]', "ExternalAuthority" %>
       <%= text_field_tag 'mads_topic[externalAuthority]', @mads_topic.externalAuthority, class: "input-block-level" %>
@@ -33,11 +30,15 @@ $(document).ready(function(){
         <%= se.label :id, "Scheme" %>
         <%= se.select :id, options_for_select(@mads_schemes, :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
       <% end %>
+      
+      
       <%= f.fields_for :topicElement do |te| %>
         <%= te.label :elementValue, "Element Value" %>
-        <%= te.text_field :elementValue, class: "input-block-level" %>
+        <%= te.text_field :elementValue, class: "typeahead", id: "eleValue" %>
       <% end %>
-              
+    
+   
+
       <div class="form-actions">
         <button type="submit" class="btn btn-primary pull-right">Save changes</button>
         <%= link_to "Cancel", mads_topic_path(@mads_topic), class: "btn btn-link pull-right" %>
