--- a/app/views/dams_built_work_places/edit.html.erb
+++ b/app/views/dams_built_work_places/edit.html.erb
@@ -1,4 +1,12 @@
 <% @page_title =  "Edit BuiltWorkPlace" %>
+<script type="text/javascript">
+
+$(document).ready(function(){
+
+  getMultiAutoCompleteList("BuiltWorkPlace");
+
+});
+</script>
 
 <div class="row-fluid">
 	<div class="span10 offset1">
@@ -8,9 +16,10 @@
 		<%= form_for @dams_built_work_place do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
-		
+		  
+		  <div id="subjectField">
 			<%= label_tag 'dams_built_work_place[name][]', "Name" %>
-			<%= text_field_tag 'dams_built_work_place[name][]', @dams_built_work_place.name[0], class: "input-block-level" %>
+			<%= text_field_tag 'dams_built_work_place[name][]', @dams_built_work_place.name[0], class: "typeahead" %>
 		
 			<%= label_tag 'dams_built_work_place[externalAuthority][]', "ExternalAuthority" %>
 			<%= text_field_tag 'dams_built_work_place[externalAuthority][]', @dams_built_work_place.externalAuthority, class: "input-block-level" %>
@@ -21,9 +30,9 @@
 	      <% end %>
 	      <%= f.fields_for :builtWorkPlaceElement do |te| %>
 	        <%= te.label :elementValue, "Element Value" %>
-	        <%= te.text_field :elementValue, class: "input-block-level" %>
+	        <%= te.text_field :elementValue, class: "typeahead" %>
 	      <% end %>
-							
+				</div>			
 			<div class="form-actions">
 				<button type="submit" class="btn btn-primary pull-right">Save changes</button>
 				<%= link_to "Cancel", dams_built_work_place_path(@dams_built_work_place), class: "btn btn-link pull-right" %>
