--- a/app/views/mads_temporals/edit.html.erb
+++ b/app/views/mads_temporals/edit.html.erb
@@ -1,4 +1,15 @@
 <% @page_title =  "Edit Temporal" %>
+<script type="text/javascript">
+
+$(document).ready(function(){
+
+  getMultiAutoCompleteList("Topic");
+
+  // getAutocompleteItem();     
+
+
+});
+</script>
 
 <div class="row-fluid">
 	<div class="span10 offset1">
@@ -8,9 +19,9 @@
 		<%= form_for @mads_temporal do |f| %>
 		
 			<%= render 'error_messages', object: f.object %>
-		
+		<div id="subjectField">
 			<%= label_tag 'mads_temporal[name]', "Name" %>
-			<%= text_field_tag 'mads_temporal[name]', @mads_temporal.name[0], class: "input-block-level" %>
+			<%= text_field_tag 'mads_temporal[name]', @mads_temporal.name[0], class: "typeahead" %>
 		
 			<%= label_tag 'mads_temporal[externalAuthority]', "ExternalAuthority" %>
 			<%= text_field_tag 'mads_temporal[externalAuthority]', @mads_temporal.externalAuthority, class: "input-block-level" %>
@@ -21,9 +32,9 @@
 		      <% end %>
 	        <%= f.fields_for :temporalElement do |te| %>
 	         	<%= te.label :elementValue, "Element Value" %>
-	        	<%= te.text_field :elementValue, class: "input-block-level" %>
+	        	<%= te.text_field :elementValue, class: "typeahead" %>
 	        <% end %>
-							
+			</div>			
 			<div class="form-actions">
 				<button type="submit" class="btn btn-primary pull-right">Save changes</button>
 				<%= link_to "Cancel", mads_temporal_path(@mads_temporal), class: "btn btn-link pull-right" %>
